Formatted code Gap issue resolved Added font size and weight to 'Learn More' Correct value for left on popular Added several flex wraps Added 1024 and 767 width screens for tablets and phones respectively

--- a/css/style.css
+++ b/css/style.css
@@ -97,12 +97,6 @@ section:nth-child(1) h1{
     margin-top: 40px;
 }
 
-.fa-location-dot{
-    background-color: var(--red);
-    border-radius: 7px 0px 0px 7px;
-    padding: 6px 15px 6px 15px;
-}
-
 section:nth-child(1) form input{
     border: 1px solid var(--grey);
     padding: 6px 0px 6px 0px;
@@ -112,10 +106,19 @@ section:nth-child(1) form input{
 
 section:nth-child(1) form i{
     color: var(--white);
+    background-color: var(--red);
+    border-radius: 7px 0px 0px 7px;
+    padding: 6px 15px 7px 15px;
+    border: 0px solid var(--grey);
+    font-size: 16px;
+    font-weight: 900;
+    line-height: 16px;
+    text-align: left;
+
 }
 
 section:nth-child(1) form button{
-    border: 1px solid var(--grey);
+    border: 0px solid var(--grey);
     border-radius: 0px 7px 7px 0px;
     padding: 6px 15px 6px 15px;
     background-color: var(--red);
@@ -127,6 +130,7 @@ section:nth-child(1) article{
     display: flex;
     align-items: center;
     gap: 24px;
+    flex-wrap: wrap;
 } 
 
 section:nth-child(1) article a{
@@ -181,7 +185,7 @@ section:nth-child(2) > div > article{
     flex-direction: row;
     flex-wrap: wrap;
     background-color: var(--lightgrey);
-    gap: 10px;
+    gap: 20px;
 }
 
 section:nth-child(2) > div > article > a{
@@ -243,6 +247,11 @@ section:nth-child(2) > div > article > a > div > article > div:last-child{
     line-height: 15px;
 }
 
+section:nth-child(2) > div > a{
+    font-size: 18px;
+    font-weight: 700;
+}
+
 section:nth-child(2) > div > article > a > div > article > div:last-child > i:last-child{
     color: var(--grey);
 }
@@ -262,11 +271,10 @@ section:nth-child(2) > aside > article{
     flex-direction: row;
     flex-wrap: wrap;
     background-color: var(--lightgrey);
-    gap: 10px;
+    gap: 20px;
 }
 
 section:nth-child(2) > aside > a{
-    flex:1;
     box-shadow: rgba(193, 193, 193, 1) 0px 7px 29px 0px;
     border-radius: 12px 12px 12px 12px;
     background-color: var(--white);
@@ -286,7 +294,7 @@ section:nth-child(2) .popular::after{
     content:"Popular";
     position: absolute;
     top: 10px;
-    left: 6px;
+    left: 12px;
     background-color: var(--red);
     color: var(--white);
     padding: 5px;
@@ -343,6 +351,7 @@ section:nth-child(3){
 section:nth-child(3) > div{
     display: flex;
     gap: 40px;
+    flex-wrap: wrap;
 }
 
 section:nth-child(3) > div > a{
@@ -412,4 +421,61 @@ footer h2{
 footer a:hover{
     color: var(--red);
     transition: all 0.3s;
+}
+
+@media screen and (max-width: 1024px){
+    section:nth-child(2) {
+        flex-direction: column;
+    }
+    
+    section:nth-child(3) > div > a{
+        flex:1 0 40%;
+    }
+    section:nth-child(2) > div > article > a{
+        flex: 1 0 40%;
+    }
+    section:nth-child(2) > aside{
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 767px){
+    header{
+        flex-direction: column;
+        align-items: center;
+    }
+    header nav ul{
+        display: flex;
+        list-style: none;
+        padding: 0px 0px 0px 0px;
+        gap: 0px;
+    }
+    
+    header nav ul li a{
+        color:var(--black);
+        border-bottom: 1px var(--grey) solid;
+        border-top: 0px;
+        /* border: 0px 0px 1px 0px var(--grey) solid; */
+        padding: 0px 50px 0px 50px;
+    }
+    
+    header nav ul li a:hover{
+        /* border-bottom: 0px 0px 1px 0px var(--red) solid; */
+        border-bottom: 1px var(--red) solid;
+        border-top: 0px;
+        padding: 0px 50px 0px 50px;
+    }
+    section:nth-child(2) {
+        flex-direction: column-reverse;
+    }
+    section:nth-child(2) > div > article > a{
+        flex: 1 0 100%;
+    }
+    section:nth-child(3) > div > a{
+        flex:1 0 100%;
+    }
+    footer div {
+        flex-direction: column;
+        gap: 40px;
+    }
 }
